Added auth
